--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
         <h1>Keep-Alive Service</h1>
         <div class="status">
             <span class="pulse"></span>
-            API's Calling Every Minute
+            API's Calling Every 30 Seconds
         </div>
         <div class="api-url">
             Target: https://nova-library-backend.onrender.com/api/v1/health/
